<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plastira\'s Museum</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_museum">Το μουσείο</string>
    <string name="nav_history">Ιστορία</string>
    <string name="nav_gallery">Εκθέματα</string>
    <string name="nav_location">Τοποθεσία</string>
    <string name="nav_forecast">Ο καιρός</string>
    <string name="nav_about">Περί</string>
    <string-array name="nav_drawer_items">
        <item>South Park</item>
        <item>Family Guy</item>
        <item>The Simpsons</item>
        <item>Futurama</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_south_park</item>
        <item>@drawable/ic_family_guy</item>
        <item>@drawable/ic_simpsons</item>
        <item>@drawable/ic_futurama</item>
    </array>

    <string name="nav_header">Μουσείο Πλαστήρα</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Lorem Ipsum-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum.</string>

    <!--Museum text-->
    <string name="info">Πληροφορίες\n</string>
    <string name="phone">Τηλέφωνο: 2440 0 00000</string>
    <string name="times">Ωρες Λειτουργίας: 09:00-13:00</string>
    <string name="fee">Τιμή εισόδου: Ελεύθερη είσοδος</string>
    <string name="related_info">Σχετικά</string>
    <string name="related_info_text">Το Κέντρο Ιστορικών Μελετών Ν. Πλαστήρας είναι Νομικό Πρόσωπο
        του Δήμου Πλαστήρα. Ιδρύθηκε το 1994. Εδρεύει στο Μορφοβούνι Καρδίστας, τόπος καταγωγής
        του Ν. Πλαστήρα και σημερινή έδρα του ομώνυμου Δήμου. Το Κοινοτοικό Συμβούλιο Μορφοβουνίου,
        με την 114/25.11.94 απόφασή του, σύστησε ίδιο Νομικό Πρόσωπο με την ονομασία Κέντρο
        Ιστορικών Μελετών «Ν. Πλαστήρας» . Στις 4-8-1996 έγιναν τα εγκαίναι από τον Απόστολο
        Κακλαμάνη, ο οποίος διατελούσε πρόεδρος της βουλής των Ελλήνων.\n</string>
    <string name="structure_text">\nΣτο πλαίσιο του ιδρύματος λειτουργεί:\n
•	Τμήμα βιβλιοθήκης, το οποίο συγκεντρώνει βιβλία για τις ανάγκες της έρευνας.\n
•	Τμήμα αρχείου χειρογράφων, για τη συλλογή εγγράφων σχετικών με την τοπική, εθνική ιστορία.\n
•	Τμήμα οπτιακουστικού υλικού, εντύπων και καταγραφής προφορικών μαρτυριών τα οποία συγκεντρώνουν
        υλικό με ανάλογο περιεχόμενο.\n
•	Τμήμα ιστορικών πηγών, ιστορικών σπουδών και εκδόσεων.\n</string>
    <string name="goals_text">\nΒασικός στόχος του, είναι να τιμήσει την μνήμη και να ανάδειξει
        την προσφορά του Ν. Πλαστήρα στην γενέτειρα του, μέσω διαφόρων εκδηλώσεων και
        δραστηριοτήτων τόσο στο Μορφοβούνι, όσο και άλλες περιοχές της Ελλάδας.
        Στις δραστηριότητες του μουσείου συμπεριλαμβάνονται η διοργάνωση συνεδρίων και ημερίδων
        στην έδρα του στο Μορφοβούνι. Σε συνεργασία με άλλους φορείς συμμετέχει σε εκθέσεις και
        εκδηλώσεις σε άλλες περιοχές της Ελλάδας.</string>

    <!--Map text-->
    <string name="map_marker_text">Μουσείο Ν. Πλαστήρα</string>

    <!--Weather text-->
    <string name="temprature">Θερμοκρασία</string>
</resources>
