<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_museum_fragment"
            android:icon="@drawable/ic_one"
            android:title="@string/nav_museum"
            android:checked="true" />
        <item
            android:id="@+id/nav_history_fragment"
            android:icon="@drawable/ic_two"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_gallery_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_location_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_forecast_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/nav_forecast" />
        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/nav_about" />
    </group>

</menu>